--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
                     <div>
                         <a href="https://github.com/GevorgSimonyan1"><i class="fab fa-github"></i></a>
                     </div>
+                    <br>
                     <div>
-                        <a href=" https://gevorgsimonyan1.github.io/rock.githup.io/"><i class="fab fa-github"></i></a>
+                        <a href=" https://gevorgsimonyan1.github.io/rock.githup.io/" class="i"><i class="fab fa-github"></i></a>
                     </div>
                     <div>
-                        <a href="https://github.com/GevorgSimonyan10"><i class="fab fa-github"></i></a>
+                        <a href="https://gevorgsimonyan1.github.io/Grow.githup.io/" class="i"><i class="fab fa-github"></i></a>
                     </div>
 
                 </div>
