--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p><span>Preferences:</span> I have a lot of preferences because I have a lot of interests. I like sports և reading. and computers more. In addition,I like to take on new challenges, I enjoy solving those problems.</p>
             </div>
             <div class="I-know">
-                <p><span class="know">I Know:   </span>I studied at a <a href="https://www.smartcode.am/" class="smart">SmartCode</a> und I can work with    <strong> HTML5, CSS3, BOOTSTRAP5, SCSS, JavaScript, React.js ,Redux</strong> programs educational institution I learned to do practical work, to get projectors whose knees I will put under   </p>
+                <p><span class="know">I Know:   </span>I studied at a <a href="https://www.smartcode.am/" class="smart">SmartCode</a> und I can work with    <strong> HTML5, CSS3, BOOTSTRAP5, SCSS, JavaScript, React.js ,Redux</strong> programsc.I learned to do practical work, to get projectors whose knees I will put under   </p>
             </div>
             <div class="work">
                 <p><span>Work:</span>I am not afraid of difficult tasks and responsibilities.I learn fast, I have a great desire. I have a great desire for progress in this field և I have a great desire to work in this field.At the moment, work experience is important for me, so I will listen to any offer</p>
