--- a/index.html
+++ b/index.html
@@ -35,22 +35,28 @@
                     <div>
                         <a href="https://gevorgsimonyan1.github.io/Grow.githup.io/" class="i"><i class="fab fa-github"></i></a>
                     </div>
+                    <div>
+                        <a href="tel: +37477566833"><i class="fas fa-phone"></i></a>
+                    </div>
+                    <div>
+                        <a href="mailto:gev.simonyan.2018@mail.ru"><i class="fas fa-envelope"></i></a>
+                    </div>
 
                 </div>
             </div>
         </div>
         <div class="about">
             <div class="education">
-                <p><span>Education:</span> After graduating from school, I entered the Polytechnic Institute and I am still studying.</p>
+                <p><span>Education: </span> After graduating from school, I entered the Polytechnic Institute and I am still studying.</p>
             </div>
             <div class="preferences">
                 <p><span>Preferences:</span> I have a lot of preferences because I have a lot of interests. I like sports և reading. and computers more. In addition,I like to take on new challenges, I enjoy solving those problems.</p>
             </div>
             <div class="I-know">
-                <p><span class="know">I Know:   </span>I studied at a <a href="https://www.smartcode.am/" class="smart">SmartCode</a> und I can work with    <strong> HTML5, CSS3, BOOTSTRAP5, SCSS, JavaScript, React.js ,Redux</strong> programsc.I learned to do practical work, to get projectors whose knees I will put under   </p>
+                <p><span class="know"> I Know:   </span>I studied at a <a href="https://www.smartcode.am/" class="smart">SmartCode</a> und I can work with    <strong> HTML5, CSS3, BOOTSTRAP5, SCSS, JavaScript, React.js(Redux)</strong> programsc.I learned to do practical work, to get projectors whose knees I will put under   </p>
             </div>
             <div class="work">
-                <p><span>Work:</span>I am not afraid of difficult tasks and responsibilities.I learn fast, I have a great desire. I have a great desire for progress in this field և I have a great desire to work in this field.At the moment, work experience is important for me, so I will listen to any offer</p>
+                <p><span>Work: </span> I am not afraid of difficult tasks and responsibilities.I learn fast, I have a great desire. I have a great desire for progress in this field և I have a great desire to work in this field.At the moment, work experience is important for me, so I will listen to any offer</p>
             </div>
             
 
