--- a/index.html
+++ b/index.html
@@ -22,25 +22,29 @@
                    <p>Frond-End</p>
                 </div>
                 <div class="contacts">
-                    <div>
-                        <a href="https://www.facebook.com/gev.simonzan"><i class="fab fa-facebook-f"></i></a>
+                    <div class="tel-mail">
+                       <div>
+                           <a href="https://www.facebook.com/gev.simonzan"><i class="fab fa-facebook-f"></i></a>
+                       </div>
+                       <div>
+                           <a href="tel: +37477566833"><i class="fas fa-phone"></i></a>
+                       </div>
+                       <div>
+                           <a href="mailto:gev.simonyan.2018@mail.ru"><i class="fas fa-envelope"></i></a>
+                       </div>
                     </div>
-                    <div>
-                        <a href="https://github.com/GevorgSimonyan1"><i class="fab fa-github"></i></a>
-                    </div>
-                    <br>
-                    <div>
-                        <a href=" https://gevorgsimonyan1.github.io/rock.githup.io/" class="i"><i class="fab fa-github"></i></a>
-                    </div>
-                    <div>
-                        <a href="https://gevorgsimonyan1.github.io/Grow.githup.io/" class="i"><i class="fab fa-github"></i></a>
-                    </div>
-                    <div>
-                        <a href="tel: +37477566833"><i class="fas fa-phone"></i></a>
-                    </div>
-                    <div>
-                        <a href="mailto:gev.simonyan.2018@mail.ru"><i class="fas fa-envelope"></i></a>
-                    </div>
+                    <div class="git">
+                       <div class="git-big">
+                           <a href="https://github.com/GevorgSimonyan1"><i class="fab fa-github"></i></a>
+                       </div>
+                       <div>
+                           <a href=" https://gevorgsimonyan1.github.io/rock.githup.io/" class="i"><i class="fab fa-github git-big"></i></a>
+                       </div>
+                       <div>
+                           <a href="https://gevorgsimonyan1.github.io/Grow.githup.io/" class="i"><i class="fab fa-github"></i></a>
+                       </div>
+                    </div>  
+                    
 
                 </div>
             </div>
